<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageUser"
    android:background="@android:color/black">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/te1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User 1:"
            android:textSize="24sp"
            android:textColor="@color/gold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_player"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_20"
            android:layout_below="@+id/t5"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@id/t1"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:layout_below="@+id/t1"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3"
            android:text="@string/start_date_04_03_19"
            android:textColor="@color/gold"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_1"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@id/t3"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
    </RelativeLayout>
</LinearLayout>