<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".UserDash"
    android:orientation="vertical"
    android:background="@android:color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_player"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_20"
            android:layout_below="@+id/t5"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:layout_below="@+id/t1"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3"
            android:text="@string/start_date_04_03_19"
            android:textColor="@color/gold"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_1"
            android:layout_alignParentEnd="true"
            android:textColor="@color/gold"
            android:textSize="24sp"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="BASIC QUESTIONS"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="#111"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gold"
        />
    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="20dp"
        android:text="MEDIUM QUESTIONS"
        android:textAlignment="center"
        android:background="#111"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gold"
        />
    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="ADVANCED QUESTIONS"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="#111"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gold"
        />
</LinearLayout>